--- a/src/app/pages/dashboard/manage-merchant/merchant-approve/merchant-approve.component.scss
+++ b/src/app/pages/dashboard/manage-merchant/merchant-approve/merchant-approve.component.scss
@@ -47,7 +47,15 @@
         tr,
         th {
             border: none;
+            word-break: break-word;
+            text-align: center;
+            vertical-align: middle;
         }
+    }
+    
+    .action-btn {
+        box-shadow: 0 3px 4px rgb(0 0 0 / 20%) !important;
+        margin-right: 8px;
     }
 }
 
